feat: pagina mais estruturada e com melhor design

--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Avilcor - Loja de Costura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
         <h1>Avilcor</h1>
+        <div>
+            <p>A MELHOR LOJA DE COSTURA DE CAMPINA GRANDE</p>
+        </div>
     </header>
+
+    <div class="container">
+        <div class="bloco_cliente">
+            <h2 class="title">CLIENTE</h2>
+
+            <div>
+                <div>
+                    <h3>Cadastrar Cliente</h3>
+                    <button>Cadastrar</button>
+                </div>
+                <div>
+                    <h3>Ver Pedidos</h3>
+                    <button>Ver pedidos</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bloco_pedidos">
+            <h2 class="title">PEDIDOS</h2>
+
+            <div>
+                <div>
+                    <h3>Fazer Pedido</h3>
+                    <button>Fazer pedido</button>
+                </div>
+                <div>
+                    <h3>Adicionar Servico</h3>
+                    <button>Adicionar Servico</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+
+
 
