feat: implementando a requisicao GET para visualizar todos os clientes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
             <div>
                 <div>
+                    <h3>Vizualizar todos os Clientes</h3>
+                    <button onclick="window.location.href='clientes.html'">Vizualizar</button>
+                </div>
+                <div>
                     <h3>Cadastrar Cliente</h3>
                     <button>Cadastrar</button>
                 </div>
@@ -40,7 +44,21 @@
                 </div>
                 <div>
                     <h3>Adicionar Servico</h3>
-                    <button>Adicionar Servico</button>
+                    <button>Adicionar servico</button>
+                </div>
+            </div>
+        </div>
+        <div class="bloco_costureiras">
+            <h2 class="title">COSTUREIRAS</h2>
+
+            <div>
+                <div>
+                    <h3>Vizualizar Costureira</h3>
+                    <button>Vizualizar costureira</button>
+                </div>
+                <div>
+                    <h3>Adicionar Servico a Costureira</h3>
+                    <button>Adicionar Servico a costureira</button>
                 </div>
             </div>
         </div>
