--- a/clientes.html
+++ b/clientes.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-        <table border="1" cellpadding="10" cellspacing="0" style="width: 50%; margin: 20px auto; border-collapse: collapse;">
+        <table id="clientes-table" border="1" cellpadding="10" cellspacing="0" style="width: 50%; margin: 20px auto; border-collapse: collapse;">
             <thead style="background-color: #003366; color: white;">
                 <tr>
                     <th>Nome</th>
