implementando a requisicao POST para salvar um Cliente

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -24,7 +24,7 @@
         </table>
     </main>
 
-    <script type="module" src="findAllClients.js" defer></script>
+    <script type="module" src="../findAllClients.js" defer></script>
 </body>
 </html>
 
