--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div>
                     <h3>Cadastrar Cliente</h3>
-                    <button>Cadastrar</button>
+                    <button onclick="window.location.href='saveClientPage.html'">Cadastrar</button>
                 </div>
                 <div>
                     <h3>Ver Pedidos</h3>
