feat: iniciando a bsuca pelos pedidos de cada CLiente pelo seu Email

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     <h3>Ver Pedidos</h3>
-                    <button>Ver pedidos</button>
+                    <button onclick="window.location.href='seeOrdersCleint.html'">Ver pedidos</button>
                 </div>
             </div>
         </div>
