feat: criando a requisicao GET para pegar os dados de um cliente e principlamente seus pedidos exponodo uma tabala dos dados requeirdos na requisicao

--- a/pages/saveClientPage.html
+++ b/pages/saveClientPage.html
@@ -32,6 +32,6 @@
         <h3 id="mensagem" style="text-align: center; color: green;"></h3>
     </main>
 
-    <script type="module" src="../saveClient.js" defer></script>
+    <script type="module" src="../functions/client/saveClient.js" defer></script>
 </body>
 </html>
