feat: criei um autocomplete de emails do meu sistema, que faz uma requisicao GET para o banco e ele retorna uma lista de email que podem ser concluidos ao digitar

--- a/pages/seeOrdersCleint.html
+++ b/pages/seeOrdersCleint.html
@@ -30,6 +30,7 @@
         <div class="bloco">
             <h3>Insira o email do Cliente para Buscar seus Dados e seus Pedidos:</h3>
             <input type="text" id="email" placeholder="email do cliente" />
+            <div id="suggestions"></div>
             <button id="query" onclick="renderOrdersClientByEmail()">Buscar</button>
             <h3 id="response-data-message"></h3>
         </div>
