feat: incluindo a busca de um pedido por meio do seu ID

--- a/pages/client/saveClientPage.html
+++ b/pages/client/saveClientPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cadastrar Cliente - Avilcor</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
     <header>
@@ -32,6 +32,6 @@
         <h3 id="mensagem" style="text-align: center; color: green;"></h3>
     </main>
 
-    <script type="module" src="../functions/client/saveClient.js" defer></script>
+    <script type="module" src="../../functions/client/saveClient.js" defer></script>
 </body>
 </html>
