--- a/pages/client/seeOrdersCleint.html
+++ b/pages/client/seeOrdersCleint.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cadastrar Cliente - Avilcor</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
     <header>
@@ -36,7 +36,7 @@
         </div>
     </main>
 
-    <script type="module" src="../functions/client/queryOrdersClient.js" defer></script>
+    <script type="module" src="../../functions/client/queryOrdersClient.js" defer></script>
 </body>
 </html>
 
