--- a/pages/index.html
+++ b/pages/index.html
@@ -21,15 +21,15 @@
             <div>
                 <div>
                     <h3>Vizualizar todos os Clientes</h3>
-                    <button onclick="window.location.href='clientes.html'">Vizualizar</button>
+                    <button onclick="window.location.href='./client/clientes.html'">Vizualizar</button>
                 </div>
                 <div>
                     <h3>Cadastrar Cliente</h3>
-                    <button onclick="window.location.href='saveClientPage.html'">Cadastrar</button>
+                    <button onclick="window.location.href='./client/saveClientPage.html'">Cadastrar</button>
                 </div>
                 <div>
                     <h3>Ver Pedidos</h3>
-                    <button onclick="window.location.href='seeOrdersCleint.html'">Ver pedidos</button>
+                    <button onclick="window.location.href='./client/seeOrdersCleint.html'">Ver pedidos</button>
                 </div>
             </div>
         </div>
@@ -45,6 +45,10 @@
                 <div>
                     <h3>Adicionar Servico</h3>
                     <button>Adicionar servico</button>
+                </div>
+                <div>
+                    <h3>Procurar Pedido por ID</h3>
+                    <button onclick="window.location.href='./order/orderByID.html'">Procurar Pedido</button>
                 </div>
             </div>
         </div>
