--- a/pages/client/clientes.html
+++ b/pages/client/clientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Lista de Clientes - Avilcor</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
         </table>
     </main>
 
-    <script type="module" src="../functions/client/findAllClients.js" defer></script>
+    <script type="module" src="../../functions/client/findAllClients.js" defer></script>
 </body>
 </html>
 
