--- a/pages/index.html
+++ b/pages/index.html
@@ -58,7 +58,7 @@
             <div>
                 <div>
                     <h3>Vizualizar Costureira</h3>
-                    <button>Vizualizar costureira</button>
+                    <button onclick="window.location.href='./dressmaker/seeDressmaker.html'">Vizualizar costureira</button>
                 </div>
                 <div>
                     <h3>Adicionar Servico a Costureira</h3>
