fix: fixando um esqeucimento, colocando o Status na Tabela de Pedidos

--- a/pages/client/seeOrdersCleint.html
+++ b/pages/client/seeOrdersCleint.html
@@ -18,6 +18,7 @@
                     <th>Id do Pedido</th>
                     <th>Data do Pedido</th>
                     <th>Previsão</th>
+                    <th>Status</th>
                     <th>Atividades</th>
                     <th>Valor Total</th>
                 </tr>
